Fix:Prevent contact section overlapping with skills

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -604,6 +604,7 @@ section {
 #skills {
   padding: 50px 20px 100px;
   padding-top:80px;
+  padding-bottom: 50px;
   margin-bottom: 0;
   position:relative;
   overflow: visible;
